<resources>
    <string name="app_name">HealthSchedule</string>
    <string name="numero_de_identifica_o">Numero de Identificação</string>
    <string name="palavra_passe">Palavra-Passe</string>
    <string name="entrar">Entrar</string>
    <string name="Title_login">Login</string>
    <string name="text" />
    <string name="email">Email</string>
    <string name="ndOpen">Open</string>
    <string name="ndClose">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perfil">Perfil</string>
    <string name="lista">Lista</string>
    <string name="lista_de_diagnosticos">Lista de Diagnosticos</string>
    <string name="lista_de_marcacao">Lista de marcações</string>
    <string name="lista_de_medicos">Lista de medicos</string>
    <string name="contato">Contato</string>
    <string name="outros">Outros</string>
    <string name="lista_de_receitas">Lista de Receitas</string>
    <string name="menu_remover">remover</string>
    <string name="nav_perfil">nav_perfil</string>
</resources>