<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_perfil"
        android:title="@string/perfil" />
</group>
    <item android:title="@string/lista">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_diagnosticos"
                    android:title="@string/lista_de_diagnosticos" />
                <item
                    android:id="@+id/nav_marcacao"
                    android:title="@string/lista_de_marcacao" />
                <item
                    android:id="@+id/nav_medicos"
                    android:title="@string/lista_de_medicos" />
            </group>
        </menu>
    </item>
    <item android:title="@string/outros">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_contato"
                    android:title="@string/contato" />
                <item
                    android:id="@+id/nav_receitas"
                    android:title="@string/lista_de_receitas" />
            </group>
        </menu>
    </item>
</menu>